# gupload

./: BACKLOG.md  Cargo.toml  LICENSE  Makefile  README.md  policy.yaml  policy_secure_pdf.yaml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
scripts/: setup.sh
src/: cli.rs  config.rs  engine.rs  error.rs  lib.rs  limits.rs  main.rs  policy.rs  report.rs  sniff.rs
src/analyzers/: mod.rs
src/validators/: archive.rs  generic.rs  image.rs  mod.rs  pdf.rs
